// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation 1`] = `
Object {
  "message": undefined,
  "state": Object {
    "array": Array [
      "foo",
    ],
    "arrayReq": Array [
      1,
      2,
      3,
    ],
    "b": true,
    "child": Object {
      "date": "2020-01-01T00:00:00.000Z",
      "name": "Bob",
    },
    "emptyStrArr": Array [],
    "nullable": null,
    "str": "foo",
    "v": 1,
  },
  "valid": true,
  "validation": Object {
    "array": Object {
      "clear": true,
      "nullable": true,
      "required": true,
      "valid": true,
      "value": Array [
        "foo",
      ],
    },
    "arrayReq": Object {
      "clear": true,
      "nullable": false,
      "required": true,
      "valid": true,
      "value": Array [
        1,
        2,
        3,
      ],
    },
    "b": Object {
      "valid": true,
      "value": true,
    },
    "child": Object {
      "valid": true,
      "value": Object {
        "date": "2020-01-01T00:00:00.000Z",
        "name": "Bob",
      },
    },
    "child2": Object {
      "clear": true,
      "nullable": false,
      "required": false,
      "valid": true,
      "value": undefined,
    },
    "emptyStrArr": Object {
      "clear": true,
      "nullable": true,
      "required": false,
      "valid": true,
      "value": Array [],
    },
    "nullable": Object {
      "clear": true,
      "nullable": true,
      "required": true,
      "valid": true,
      "value": null,
    },
    "str": Object {
      "valid": true,
      "value": "foo",
    },
    "v": Object {
      "valid": true,
      "value": 1,
    },
  },
}
`;

exports[`Validation 2`] = `
Object {
  "message": undefined,
  "state": Object {
    "alien": "should not be removed",
    "array": Array [],
    "arrayReq": Array [],
    "b": true,
    "child": Object {
      "date": "2020-01-01T00:00:00.000Z",
      "name": 123,
    },
    "nullable": true,
    "v": null,
  },
  "valid": false,
  "validation": Object {
    "array": Object {
      "clear": true,
      "nullable": true,
      "required": true,
      "valid": true,
      "value": Array [],
    },
    "arrayReq": Object {
      "clear": true,
      "nullable": false,
      "required": true,
      "valid": false,
      "value": Array [],
    },
    "b": Object {
      "valid": true,
      "value": true,
    },
    "child": Object {
      "clear": true,
      "message": undefined,
      "nullable": false,
      "required": true,
      "valid": false,
      "validation": Object {
        "message": undefined,
        "state": Object {
          "date": "2020-01-01T00:00:00.000Z",
          "name": 123,
        },
        "valid": false,
        "validation": Object {
          "date": Object {
            "valid": true,
            "value": "2020-01-01T00:00:00.000Z",
          },
          "name": Object {
            "clear": true,
            "error": [Error: Assertion fails],
            "message": undefined,
            "nullable": false,
            "required": true,
            "valid": false,
            "value": 123,
          },
        },
      },
      "value": Object {
        "date": "2020-01-01T00:00:00.000Z",
        "name": 123,
      },
    },
    "child2": Object {
      "clear": true,
      "nullable": false,
      "required": false,
      "valid": true,
      "value": undefined,
    },
    "emptyStrArr": Object {
      "clear": true,
      "nullable": true,
      "required": false,
      "valid": true,
      "value": undefined,
    },
    "nullable": Object {
      "valid": true,
      "value": true,
    },
    "str": Object {
      "clear": true,
      "nullable": false,
      "required": false,
      "valid": true,
      "value": undefined,
    },
    "v": Object {
      "clear": true,
      "error": [Error: Assertion fails],
      "message": "The value of \\"v\\" shouldn't be null",
      "nullable": false,
      "required": true,
      "valid": false,
      "value": null,
    },
  },
}
`;

exports[`Validation 3`] = `
Object {
  "error": "Validation failed",
  "payload": Object {
    "alien": "should not be removed",
    "array": Array [],
    "arrayReq": Array [],
    "b": true,
    "child": Object {
      "date": "2020-01-01T00:00:00.000Z",
      "name": 123,
    },
    "nullable": true,
    "v": null,
  },
  "validation": Array [
    Object {
      "field": "v",
      "input": null,
      "message": "The value of \\"v\\" shouldn't be null",
    },
    Object {
      "field": "arrayReq",
      "input": Array [],
      "message": undefined,
    },
    Object {
      "field": "child",
      "validation": Array [
        Object {
          "field": "name",
          "input": 123,
          "message": "Assertion fails",
        },
      ],
    },
  ],
}
`;
